--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,29 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+
+  <ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+
+  <ion-content>
+    <ion-list>
+      <button ion-item (click)="openPage(login)">
+        Iniciar Sesion
+      </button>
+      <button ion-item (click)="openPage(addbaby)">
+        Tabla de parametros
+      </button>
+      <button ion-item (click)="openPage(eventsPage)">
+        Problemas de salud
+      </button>
+      <button ion-item (click)="closeMenu()">
+        Close Menu
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+
+
+<ion-nav [root]="rootPage" #content></ion-nav>
